package app.controllers;

/**
 * Purpose:
 *
 * @author: Kevin Løvstad Schou
 */
public class AdminController {
}
