package app.mappers;

/**
 * Purpose:
 *
 * @author: Kevin Løvstad Schou
 */
public class OrdreMapper {
}
